modules/gdscript/tests/scripts/analyzer/errors/nullable_access_operator.gd
class A:
    var b: A?
func test():
    var foo := A.new()
    foo?.b.b
